# PCLNotes

./: README.md
0点云可视/: README.md
0点云可视/1读取pcd文件并显示/: show.cpp
0点云可视/2显示点云颜色特征/: CMakeCache.txt  README.md
0点云可视/3自定义点云颜色特征/: show.cpp
0点云可视/4以颜色区别深度/: CMakeCache.txt  README.md  show.cpp
0点云可视/5在一个视图窗口下显示点云/: Makefile  cmake_install.cmake  show.cpp
0点云可视/ColorVisualizer/: CMakeCache.txt  Makefile
0点云可视/ScriptVisualizer/: CMakeCache.txt  show
1云关键点/: README.md
1云关键点/3DHarris/: CMakeCache.txt  cmake_install.cmake
1云关键点/NARF/: CMakeCache.txt  (+2 more)
2点云存储/: README.md
3特征提取/: README.md
4点云配准/: README.md
BasicIO/: CMakeCache.txt  Makefile  cmake_install.cmake  show
ColorVisualizer/: demo.cpp
DemonstrationOfPlaneAndSphereSegmentation/: CMakeCache.txt
ScriptVisualizer/: CMakeCache.txt  cmake_install.cmake  show
Segmentation/: READMD.md
SphereDivision/: show.cpp
Sphere_Fitting/: CMakeCache.txt  Makefile  cmake_install.cmake  show  show.cpp
datas/: Sphere.pcd  SphereDivision.ply  SphereDivision_far_ranges.ply  region_growing_tutorial.pcd
demo/: CMakeCache.txt  Makefile  cmake_install.cmake  show  show.cpp
scriptVisualizer/: Makefile  show.cpp
task/: 3dpoints_ground.pcd  CMakeCache.txt  Makefile  cmake_install.cmake  demo.cpp  pcd_test.pcd  show  show.cpp
task2/: CMakeCache.txt  Makefile  cmake_install.cmake  show  show.cpp
task3/: cmake_install.cmake  show
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pcl_test
visualizer/: CMakeCache.txt  Makefile  cmake_install.cmake  show  show.cpp
点云分割/: README.md
(+251 files in other folders)
